--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>World Clock - Carolina Ferreira</title>
   </head>
   <body>
-    <h1>World Clock</h1>
-
     <div class="container">
       <h1>World Clock</h1>
 
@@ -20,14 +18,18 @@
       </select>
 
       <div class="city">
-        <h2>Los Angeles 🇺🇸</h2>
-        <div class="date">August 15th 2022</div>
-        <div class="time">1:48:15 AM</div>
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
       </div>
       <div class="city">
-        <h2>Sydney 🇦🇺</h2>
-        <div class="date">August 15th 2022</div>
-        <div class="time">1:48:15 AM</div>
+        <div>
+          <h2>Paris 🇫🇷</h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
       </div>
     </div>
 
