--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           </div>
           <div class="time"></div>
         </div>
+        <a href="https://carols-worldclock.netlify.app">All cities</a>
       </div>
     </div>
 
